# FinClarify

./: .gitignore  README.md  Solution_approach.md  agents.py  client.py  main.py  pyproject.toml  server.py
